# Mobile-Inventory

./: .gitmodules  build.gradle.kts  settings.gradle.kts
Trash/app/: build.gradle.kts
Trash/app/src/main/cpp/: CMakeLists.txt  InventoryMgmt.h  date.cpp  date.h  item.h  native-lib.cpp
Trash/app/src/main/cpp/googletest/docs/: advanced.md
Trash/app/src/main/cpp/gtest/: gt_date.cpp
Trash/app/src/main/java/com/example/mobileinventory/: MainActivity.kt
Trash/app/src/main/java/com/example/mobileinventory/ui/slideshow/: SlideshowFragment.kt
Trash/app/src/main/res/values/: strings.xml
Trash/icons/Post/: add_button.psd
app/: build.gradle.kts
app/src/androidTest/java/com/example/mobileinventory/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  InventoryMgmt.cpp  date.h  item.h  native-lib.cpp
app/src/main/cpp/gtest/: gt_date.cpp
app/src/main/java/com/example/mobileinventory/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
app/src/main/java/com/example/mobileinventory/data/: Item.kt  ItemDOA.kt  ItemDao.kt  ItemDatabase.kt  ItemRepository.kt  ItemViewModel.kt
app/src/main/java/com/example/mobileinventory/ui/: ItemAdapter.kt
app/src/main/java/com/example/mobileinventory/ui/add/: addFragment.kt
app/src/main/java/com/example/mobileinventory/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
app/src/main/java/com/example/mobileinventory/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/com/example/mobileinventory/ui/list/: ListFragment.kt
app/src/main/java/com/example/mobileinventory/ui/slideshow/: SlideshowViewModel.kt
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  fragment_add.xml  fragment_list.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml  my_nav.xml  nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/mobileinventory/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
